Fix account dropdown on mobile size screens

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -64,7 +64,7 @@ input.is-success {
 
 // NAVBAR
 .nav-item {
-    @apply mx-2 text-gray-200 rounded px-2 py-1;
+    @apply text-gray-200 rounded px-2 py-1;
 }
 
 .nav-item:hover {
